use include tag to send data with context

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
 <footer class="page-footer footer footer-static footer-light navbar-border navbar-shadow">
     <div class="footer-copyright">
         <div class="container">
